添加约束布局详细介绍

--- a/baselibrary/src/main/res/layout/base_content.xml
+++ b/baselibrary/src/main/res/layout/base_content.xml
@@ -12,13 +12,16 @@
         android:layout_height="match_parent">
 
 
+
+
         <com.thanatos.baselibrary.widget.ProgressToolbar
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></com.thanatos.baselibrary.widget.ProgressToolbar>
+            android:layout_height="wrap_content"/>
 
 
 
     </LinearLayout>
+
 
 
 
