--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,24 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="#f5f5f5"
-    android:layout_height="500dp"
+    android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/iv"
-        android:layout_width="100dp"
+
+    <com.thanatos.baselibrary.widget.ProgressToolbar
+        android:id="@+id/main_toolbar"
+        app:toolbarShowNav="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <com.thanatos.baselibrary.widget.TestView
+        android:id="@+id/testView"
+        android:layout_width="match_parent"
         android:layout_height="100dp" />
 
 
-    <TextView
-        android:id="@+id/tv"
-        android:text="哈哈"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_width="100dp"
-        android:gravity="center"
-        android:layout_height="100dp" />
+
 
 </android.support.constraint.ConstraintLayout>
