--- a/baseres/src/main/res/values/styles.xml
+++ b/baseres/src/main/res/values/styles.xml
@@ -6,19 +6,78 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/textColorPrimary</item>
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:editTextColor">@color/editTextColor</item>
+        <item name="android:textColorSecondary">@color/secondTextColor</item>
+        <item name="android:colorForeground">@color/colorForeground</item>
+        <item name="android:colorButtonNormal">@color/colorPrimary</item>
+        <item name="android:colorControlHighlight">@color/colorPrimaryDark</item>
+        <item name="android:colorControlActivated">@color/colorControlActivated</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:windowDisablePreview">true</item>
+        <item name="android:windowNoDisplay">false</item>
+        <item name="android:windowBackground">@color/windowBackground</item>
+        <item name="android:windowAnimationStyle">@style/activityAnimation</item>
+        <item name="android:buttonStyle">@style/ButtonStyle</item>
+        <item name="android:editTextStyle">@style/EditTextStyle</item>
+    </style>
+
+    <!--splash-->
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
+    <!--base button-->
+    <style name="ButtonStyle" parent="@android:style/Widget.Button">
+        <item name="android:background">@drawable/ripple_btn_bg</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:elevation">2dp</item>
+    </style>
+
+    <!--base button-->
+    <style name="EditTextStyle" parent="@android:style/Widget.EditText">
+        <item name="android:background">@color/windowBackground</item>
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:textColorHint">@color/secondTextColor</item>
+        <item name="android:textCursorDrawable">@color/colorPrimary</item>
+        <item name="android:textSize">14sp</item>
     </style>
     
     <!--base dialog-->
-    <style name="WanAndroidDialogTheme" parent="android:Theme.Dialog">
-
+    <style name="WanAndroidDialogTheme" parent="android:style/Theme.Dialog">
+        <!--半透明-->
+        <item name="android:windowIsTranslucent">true</item>
+        <!--浮在activity之上-->
+        <item name="android:windowIsFloating">true</item>
+        <!--是否有遮盖-->
+        <item name="android:windowContentOverlay">@null</item>
+        <!--去除边框-->
+        <item name="android:windowFrame">@null</item>
         <!--去除标题-->
         <item name="android:windowNoTitle">true</item>
-        <!--半透明-->
+        <!--模糊-->
         <item name="android:backgroundDimEnabled">true</item>
         <!--去除背景-->
         <item name="android:windowBackground">@android:color/transparent</item>
         <!--圆角-->
         <item name="android:radius">10dp</item>
+    </style>
+
+
+    <!--activity进入退出动画-->
+    <style name="activityAnimation" parent="@android:style/Animation.Activity">
+        <!--<item name="android:activityOpenEnterAnimation">@android:anim/slide_out_right</item>-->
+        <item name="android:activityOpenExitAnimation">@android:anim/slide_in_left</item>
+        <item name="android:activityCloseEnterAnimation">@android:anim/slide_in_left</item>
+        <!--<item name="android:activityCloseExitAnimation">@android:anim/slide_in_left</item>-->
+    </style>
+
+    <!--弹窗从底部弹出动画-->
+    <style name="BaseDialog_Animation_Bottom" parent="@android:style/Animation">
+        <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_bottom</item>
     </style>
 
 </resources>
