--- a/mine/src/main/res/layout/mine_activity_register.xml
+++ b/mine/src/main/res/layout/mine_activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_gravity="center"
     android:background="@drawable/shape_bg_login"
     android:layout_height="match_parent"
-    tools:context=".mine.login.LoginActivity">
+    tools:context=".mine.register.RegisterActivity">
 
     <ImageView
         android:layout_marginTop="20dp"
@@ -26,8 +26,8 @@
         android:layout_height="350dp">
 
         <TextView
-            android:id="@+id/tv_login_title"
-            android:text="@string/app_login_title"
+            android:id="@+id/tv_register_title"
+            android:text="注册账号"
             android:textSize="17sp"
             android:textStyle="bold"
             android:layout_width="wrap_content"
@@ -48,9 +48,9 @@
             android:layout_marginRight="40dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_login_title">
+            app:layout_constraintTop_toBottomOf="@+id/tv_register_title">
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/edt_login_account"
+                android:id="@+id/edt_register_account"
                 android:cursorVisible="true"
                 android:maxLines="1"
                 android:maxLength="50"
@@ -73,7 +73,30 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout_account">
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/edt_login_password"
+                android:id="@+id/edt_register_password"
+                android:cursorVisible="true"
+                android:maxLines="1"
+                android:maxLength="50"
+                android:inputType="textPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/layout_repassword"
+            android:hint="重复密码"
+            android:textColorHint="@color/secondTextColor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layout_password">
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edt_register_repassword"
                 android:cursorVisible="true"
                 android:maxLines="1"
                 android:maxLength="50"
@@ -84,9 +107,10 @@
 
 
         <Button
-            android:id="@+id/btn_login"
-            android:text="@string/app_login_submit"
-            android:onClick="click_login"
+            android:id="@+id/btn_register"
+            android:text="注册"
+            android:transitionName="btn"
+            android:onClick="click_register"
             android:textStyle="bold"
             android:textSize="16sp"
             android:layout_marginLeft="40dp"
@@ -94,35 +118,8 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/layout_password"/>
+            app:layout_constraintTop_toBottomOf="@+id/layout_repassword"/>
 
-        <TextView
-            android:text="@string/app_login_forgot_password"
-            android:textSize="14sp"
-            android:clickable="true"
-            android:onClick="click_repassword"
-            android:background="?android:attr/selectableItemBackground"
-            android:textColor="@color/secondTextColor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login"
-            app:layout_constraintLeft_toLeftOf="parent"/>
-
-        <TextView
-            android:text="@string/app_login_register"
-            android:textSize="14sp"
-            android:clickable="true"
-            android:onClick="click_register"
-            android:background="?android:attr/selectableItemBackground"
-            android:textColor="@color/secondTextColor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login"
-            app:layout_constraintRight_toRightOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
 
