--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,15 +30,23 @@
         android:layout_height="wrap_content" />
 
     <com.thanatos.baselibrary.image.Banner
+        android:id="@+id/banner"
         android:background="@mipmap/login_bg"
+
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="120dp"
         android:layout_width="match_parent"
-        android:layout_height="180dp"/>
+        android:layout_height="180dp"
+        app:indicator_height="30dp"
+        app:indicator_gravity="center"
+        app:indicator_selector="@drawable/shape_banner_indicator_selector"
+        app:indicator_normal="@drawable/shape_banner_indicator_normal"
+        app:indicator_background="#33000000"/>
 
     <ImageView
         android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:contentDescription="TODO" />
 
 </android.support.constraint.ConstraintLayout>
