--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="#f5f5f5"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <com.thanatos.baselibrary.widget.viewpager.CustomViewPager
+        android:id="@+id/mainPager"
+        android:layout_weight="1"
+        app:canSmoothScroll="false"
+        app:horizontalCanScroll="false"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.Toolbar
-            app:title="haha"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </android.support.design.widget.AppBarLayout>
+        android:layout_height="0dp"/>
 
 
-
-
-
-    <Button
-        android:onClick="a"
-        android:layout_marginTop="60dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <com.thanatos.baselibrary.image.Banner
-        android:id="@+id/banner"
-        android:background="@mipmap/login_bg"
-
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="120dp"
+    <android.support.design.widget.TabLayout
+        app:tabMode="fixed"
+        app:tabBackground="@null"
+        android:background="#EBEBEB"
+        app:tabIndicatorHeight="0dp"
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        app:indicator_height="30dp"
-        app:indicator_gravity="center"
-        app:indicator_selector="@drawable/shape_banner_indicator_selector"
-        app:indicator_normal="@drawable/shape_banner_indicator_normal"
-        app:indicator_background="#33000000"/>
+        android:layout_height="50dp"/>
 
-    <ImageView
-        android:scaleType="centerCrop"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="TODO" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
