--- a/article/src/main/res/layout/article_item_index_home.xml
+++ b/article/src/main/res/layout/article_item_index_home.xml
@@ -30,6 +30,7 @@
             android:gravity="center_vertical"
             android:layout_width="wrap_content"
             android:maxLines="1"
+            android:textColor="@color/secondTextColor"
             android:ellipsize="end"
             android:layout_height="25dp"
             app:layout_constraintHorizontal_bias="0"
@@ -44,6 +45,7 @@
             android:id="@+id/tvType"
             android:textSize="12sp"
             tools:text="网络访问"
+            android:textColor="@color/colorPrimaryDark"
             android:gravity="center_vertical"
             android:maxLines="1"
             android:ellipsize="end"
@@ -81,6 +83,7 @@
             android:id="@+id/tvDate"
             tools:text="22小时前"
             android:textSize="12sp"
+            android:textColor="@color/secondTextColor"
             android:gravity="center"
             android:layout_marginTop="10dp"
             app:layout_constraintRight_toRightOf="parent"
