--- a/baseres/src/main/res/values/styles.xml
+++ b/baseres/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:textColorPrimary">@color/textColorPrimary</item>
         <item name="android:textColor">@color/textColor</item>
         <item name="android:editTextColor">@color/editTextColor</item>
-        <item name="android:textColorSecondary">@color/secondTextColor</item>
+        <item name="android:textColorSecondary">@color/textColorPrimary</item>
         <item name="android:colorForeground">@color/colorForeground</item>
         <item name="android:colorButtonNormal">@color/colorPrimary</item>
         <item name="android:colorControlHighlight">@color/colorPrimaryDark</item>
